product card dark mode bug fixed

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -14,7 +14,7 @@
   }
 
   .dark {
-    --background: #0a0a0a;
+    --background: #101010;
     --foreground: #ededed;
     --primary: #24f89c;
     --varWhite: #222222;
